2010-01-25  Mario Carrion  <mcarrion@novell.com>

	* ItemAutomationPeer.cs: Removed properties: RealItem and
	RealItemsControlAutomationPeer. Fixed properties: Item and
	ItemsControlAutomationPeer to match MS implementation.
	* ItemsControlAutomationPeer.cs: Private method added: GetItem, used
	to get the children using internal method or indexer.
	* SelectorItemAutomationPeer.cs: Property removed:
	RealItemsControlAutomationPeer, not needed.

	r: alan

2010-01-08  Mario Carrion  <mcarrion@novell.com>

	* FrameworkElementAutomationPeer.cs: Fixes Bug #568627: IsOffscreen
	event not raised when Visibility changes 

	r: spouliot

2009-12-17  Mario Carrion  <mcarrion@novell.com>

	* ScrollBarAutomationPeer.cs: Fixes NRE when MoonAtkBridge is
	available.
	* ItemAutomationPeer.cs,
	  ButtonBaseAutomationPeer.cs: Delegate moved from constructor to new
	method OnContentChanged.
	* FrameworkElementAutomationPeer.cs: New internal method
	OnContentChanged used raise AutomationEvents.StructureChanged when
	ContentControl.Control sets to Panel subclasses.

	r: toshok

2009-12-01  Brad Taylor  <brad@getcoded.net>

	* AutomationSingleton.cs: Remove INTERNAL_HACK ifdef as it is no longer
	used.

	r: spouliot

2009-12-01  Brad Taylor  <brad@getcoded.net>

	* ProgressBarAutomationPeer.cs: ProgressBars are always read-only.

2009-11-19  Mario Carrion  <mcarrion@novell.com>

	* FrameworkElementAutomationPeer.cs: IsKeyboarFocusable: fixed
	implementation and raises event.

	r: toshok

2009-11-19  Mario Carrion  <mcarrion@novell.com>

	* TextBoxAutomationPeer.cs: Fixes NRE when AtkBridge is used.
	* FrameworkElementAutomationPeer.cs: Fixed IsOffscreenCore(). Raises
	BoundingRectangleProperty when Visibility changes.

	r: toshok

2009-10-28  Mario Carrion  <mcarrion@novell.com>

	* ComboBoxAutomationPeer.cs: UIA events are raised by ComboBox.
	* RangeBaseAutomationPeer.cs: UIA events are raised by RangeBase.
	* RadioButtonAutomationPeer.cs: Not using public events to raise UIA