@@ -1,3 +1,10 @@
+2010-01-26  Mario Carrion  <mcarrion@novell.com>
+
+	* System.Windows.Automation.Peers/TabItemAutomationPeerTest.cs: Test
+	TabItemAutomationPeer.
+
+	r: alan
+
 2010-01-25  Mario Carrion  <mcarrion@novell.com>
 
 	* System.Windows.Automation.Peers/TabControlAutomationPeerTest.cs:
